# aws-doc-sdk-examples

./: .abapgit.xml  .flake8  .git-blame-ignore-revs  .gitallowed  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DetectLabelsS3.java  Dockerfile  IAMScenario.java  LICENSE  NOTICE  README.md  README.rst  SendMessage.php  TranscribeStreamingDemoFile.java  abaplint.json  aws_configure.sh  check_metadata.py  code-index.md  connector-image-classification-usage.py  connector-kinesis-firehose-usage.py  connector-sns-usage.py  fix.py  getting-started-connectors.py  iot-data-client-boto3.py  iot-data-client-greengrasssdk.py  local-resource-access-volume.py  migrate_rust_dev_preview.sh  mp3_masterList.txt  non-status_list.txt  package-lock.json  package.json  php.md  pom.xml  premium-processor.py  (+6 more)
.rust_alpha/apigateway/: Cargo.toml  README.md
.rust_alpha/cloudformation/: Cargo.toml  README.md
.rust_alpha/cognitoidentity/: Cargo.toml
.rust_alpha/cognitoidentityprovider/: Cargo.toml  README.md
.rust_alpha/config/: Cargo.toml  README.md
.rust_alpha/dynamodb/: Cargo.toml  README.md
.rust_alpha/dynamodb/CRUD/: Cargo.toml
.rust_alpha/dynamodb/add-item/: Cargo.toml
.rust_alpha/dynamodb/create-table/: Cargo.toml
.rust_alpha/dynamodb/delete-item/: Cargo.toml
.rust_alpha/dynamodb/delete-table/: Cargo.toml
.rust_alpha/dynamodb/helloworld/: Cargo.toml
.rust_alpha/dynamodb/list-items/: Cargo.toml
.rust_alpha/dynamodb/list-tables/: Cargo.toml
.rust_alpha/dynamodb/movies/: Cargo.toml
.rust_alpha/ebs/: Cargo.toml  README.md
.rust_alpha/iam/: Cargo.toml  README.md
.rust_alpha/kms/: Cargo.toml  README.md
.rust_alpha/kms/CreateKey/: Cargo.toml  key_metadata.txt
.rust_alpha/kms/Decrypt/: Cargo.toml
.rust_alpha/kms/Encrypt/: Cargo.toml
.rust_alpha/lambda/: Cargo.toml  README.md
.rust_alpha/qldb/: Cargo.toml  README.md
.rust_alpha/rds/: Cargo.toml  README.md
.rust_alpha/rdsdata/: Cargo.toml  README.md
.rust_alpha/route53/: Cargo.toml  README.md
.rust_alpha/s3/: Cargo.toml  README.md
.rust_alpha/ses/: Cargo.toml  README.md
.rust_alpha/sts/: Cargo.toml  README.md
rust_dev_preview/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  run_all.sh  rust-toolchain.toml
rust_dev_preview/.cargo/: config.toml
rust_dev_preview/apigateway/: Cargo.toml  README.md
rust_dev_preview/apigatewaymanagement/: Cargo.toml  README.md
rust_dev_preview/applicationautoscaling/: Cargo.toml  README.md
rust_dev_preview/autoscaling/: Cargo.toml  README.md
rust_dev_preview/autoscalingplans/: Cargo.toml  README.md
rust_dev_preview/batch/: Cargo.toml  README.md
rust_dev_preview/ca-certs/: Cargo.toml
rust_dev_preview/cloudformation/: Cargo.toml  README.md
rust_dev_preview/cloudwatch/: Cargo.toml  README.md
rust_dev_preview/cloudwatchlogs/: Cargo.toml  README.md
rust_dev_preview/cognitoidentity/: Cargo.toml  README.md
rust_dev_preview/cognitoidentityprovider/: Cargo.toml  README.md
rust_dev_preview/cognitosync/: Cargo.toml  README.md
rust_dev_preview/concurrency/: Cargo.toml
rust_dev_preview/concurrency-sqs/: Cargo.toml
rust_dev_preview/config/: Cargo.toml  README.md
rust_dev_preview/cross_service/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
rust_dev_preview/custom-root-certificates/: Cargo.toml
rust_dev_preview/custom_retries/: Cargo.toml
rust_dev_preview/dynamodb/: Cargo.toml  README.md  serialize_document_example.json
rust_dev_preview/ebs/: Cargo.toml  README.md
rust_dev_preview/ec2/: Cargo.toml  README.md
rust_dev_preview/ecr/: Cargo.toml  README.md
rust_dev_preview/ecs/: Cargo.toml  README.md
rust_dev_preview/eks/: Cargo.toml  README.md
rust_dev_preview/examples/: Cargo.toml  rust-toolchain.toml
rust_dev_preview/firehose/: Cargo.toml  README.md
rust_dev_preview/globalaccelerator/: Cargo.toml
rust_dev_preview/glue/: Cargo.toml  README.md
rust_dev_preview/greengrassv2/: Cargo.toml  README.md
rust_dev_preview/iam/: Cargo.toml  README.md  tmp.json
rust_dev_preview/iot/: Cargo.toml  README.md
rust_dev_preview/kinesis/: Cargo.toml  README.md
rust_dev_preview/kms/: Cargo.toml  README.md
rust_dev_preview/lambda/: Cargo.toml  README.md
rust_dev_preview/localstack/: Cargo.toml  README.md
rust_dev_preview/medialive/: Cargo.toml  README.md
rust_dev_preview/mediapackage/: Cargo.toml  README.md
rust_dev_preview/polly/: Cargo.toml  README.md
rust_dev_preview/qldb/: Cargo.toml  README.md
rust_dev_preview/rds/: Cargo.toml  README.md
rust_dev_preview/rdsdata/: Cargo.toml  README.md
rust_dev_preview/resourceexplorer2/: Cargo.toml
rust_dev_preview/route53/: Cargo.toml  README.md
rust_dev_preview/s3/: Cargo.toml  README.md  testfile.txt
rust_dev_preview/sagemaker/: Cargo.toml  README.md
rust_dev_preview/sdk-config/: Cargo.toml
rust_dev_preview/secretsmanager/: Cargo.toml  README.md
rust_dev_preview/sending-presigned-requests/: Cargo.toml
rust_dev_preview/ses/: Cargo.toml  README.md
rust_dev_preview/setting-timeouts/: Cargo.toml
rust_dev_preview/setting_timeouts/: Cargo.toml
rust_dev_preview/sitewise/: Cargo.toml  README.md
rust_dev_preview/snowball/: Cargo.toml  README.md
rust_dev_preview/sns/: Cargo.toml  README.md
rust_dev_preview/sqs/: Cargo.toml  README.md
rust_dev_preview/ssm/: Cargo.toml  README.md
rust_dev_preview/stepfunction/: Cargo.toml  README.md
rust_dev_preview/sts/: Cargo.toml  README.md
rust_dev_preview/test-utils/: Cargo.toml  README.md
rust_dev_preview/testing/: Cargo.toml  README.md
rust_dev_preview/textract/: Cargo.toml  README.md
rust_dev_preview/tls/: Cargo.toml  README.md
rust_dev_preview/tools/: add_aws_config_feature.py  requirements.txt  set_rust_version.py  toggle_sdk_branch.py
rust_dev_preview/transcribestreaming/: Cargo.toml  README.md
rust_dev_preview/using-native-tls-instead-of-rustls/: Cargo.toml
rust_dev_preview/using_native_tls_instead_of_rustls/: Cargo.toml
rust_dev_preview/webassembly/: Cargo.toml  README.md  additional-ci
(+21209 files in other folders)
