# Note: this workspace exists solely for the convenience of 
# compiling/auto-formatting/testing all the AWS Rust SDK examples together.
[workspace]
members = [
    "apigateway",
    "apigatewaymanagement",
    "applicationautoscaling",
    "autoscaling",
    "autoscalingplans",
    "batch",
    "ca-certs",
    "cloudformation",
    "cloudwatch",
    "cloudwatchlogs",
    "cognitoidentity",
    "cognitoidentityprovider",
    "cognitosync",
    "config",
    "cross_service/detect_faces",
    "cross_service/detect_labels",
    "cross_service/telephone",
    "custom_retries",
    "dynamodb",
    "ebs",
    "ec2",
    "ecr",
    "ecs",
    "eks",
    "iam",
    "iot",
    "kinesis",
    "kms",
    "lambda",
    "localstack",
    "logging/logger",
    "logging/tracing",
    "medialive",
    "mediapackage",
    "polly",
    "qldb",
    "rds",
    "rdsdata",
    "route53",
    "s3",
    "sagemaker",
    "secretsmanager",
    "ses",
    "setting_timeouts",
    "snowball",
    "sns",
    "sqs",
    "ssm",
    "testing",
    "transcribestreaming",
    "using_native_tls_instead_of_rustls"
]
