# Note: this workspace exists solely for the convenience of 
# compiling/auto-formatting/testing all the AWS Rust SDK examples together.
[workspace]
members = [
    "apigateway",
    "apigatewaymanagement",
    "applicationautoscaling",
    "autoscaling",
    "autoscalingplans",
    "batch",
    "ca-certs",
    "cloudformation",
    "cloudwatch",
    "cloudwatchlogs",
    "cognitoidentity",
    "cognitoidentityprovider",
    "cognitosync",
    "config",
    "cross_service/detect_faces",
    "cross_service/detect_labels",
    "cross_service/rest_ses",
    "cross_service/telephone",
    "dynamodb",
    "ebs",
    "ec2",
    "ecr",
    "ecs",
    "eks",
    "greengrassv2",
    "globalaccelerator",
    "iam",
    "iot",
    "kinesis",
    "kms",
    "lambda",
    "localstack",
    "logging/logger",
    "logging/tracing",
    "medialive",
    "mediapackage",
    "polly",
    "qldb",
    "rds",
    "rdsdata",
    "route53",
    "s3",
    "sagemaker",
    "sdk-config",
    "secretsmanager",
    "sending-presigned-requests",
    "ses",
    "sitewise",
    "snowball",
    "sns",
    "sqs",
    "ssm",
    "stepfunction",
    "testing",
    "tls",
    "transcribestreaming",
    "using-native-tls-instead-of-rustls"
]
