# Note: this workspace exists solely for the convenience of 
# compiling/auto-formatting/testing all the AWS Rust SDK examples together.
[workspace]
members = [
    "apigateway",
    "apigatewaymanagement",
    "applicationautoscaling",
    "autoscaling",
    "autoscalingplans",
    "batch",
    "cloudformation",
    "cloudwatch",
    "cloudwatchlogs",
    "cognitoidentity",
    "cognitoidentityprovider",
    "cognitosync",
    "concurrency",
    "config",
    "cross_service/detect_faces",
    "cross_service/detect_labels",
    "cross_service/rest_ses",
    "cross_service/telephone",
    "custom-root-certificates",
    "dynamodb",
    "ebs",
    "ec2",
    "ecr",
    "ecs",
    "eks",
    "firehose",
    "globalaccelerator",
    "glue",
    "greengrassv2",
    "iam",
    "iot",
    "kinesis",
    "kms",
    "lambda",
    "localstack",
    "logging/logger",
    "logging/tracing",
    "medialive",
    "mediapackage",
    "polly",
    "qldb",
    "rds",
    "rdsdata",
    "route53",
    "s3",
    "sagemaker",
    "sdk-config",
    "secretsmanager",
    "sending-presigned-requests",
    "ses",
    "sitewise",
    "snowball",
    "sns",
    "sqs",
    "ssm",
    "stepfunction",
    "sts",
    "test-utils",
    "testing",
    "textract",
    "tls",
    "transcribestreaming"
]
