[package]
name = "apigateway-code-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.0.22-alpha"
aws-sdk-apigateway = "0.0.22-alpha"
tokio = { version = "1", features = ["full"] }
actix-rt = "*"
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.18"
