[package]
name = "dynamodb-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-sdk-dynamodb" }
aws-hyper = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-hyper"}
aws-http = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-http"}
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-types" }
smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "smithy-http" }
smithy-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "smithy-types" }
rand = "0.8.3"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
