[package]
name = "iam-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com"]
edition = "2018"
description = "Example usage of the IAM service"

[dependencies]
aws-sdk-iam = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-sdk-iam" }
aws-hyper = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-hyper" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-types" }
tokio = { version = "1", features = ["full"]}
serde_json = "1"
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.18"