[package]
name = "kms-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com"]
edition = "2018"
description = "Example usage of the KMS service"

[dependencies]
aws-config = "0.0.22-alpha"
aws-sdk-kms = "0.0.22-alpha"
aws-hyper = "0.0.22-alpha"
tokio = { version = "1", features = ["full"]}
base64 = "0.13.0"
structopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
