[package]
name = "apigatewaymanagement-code-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.0.26-alpha"
aws-sdk-apigatewaymanagement = "0.0.26-alpha"
http = "0.2.5"
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.18"
