[package]
name = "applicationautoscaling-code-examples"
version = "0.1.0"
authors = [
  "John DiSanti <jdisanti@amazon.com>, Doug Schwartz <dougsch@amazon.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-applicationautoscaling = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
