[package]
name = "custom-root-certs"
version = "0.1.0"
authors = ["rcoh@amazon.com>"]
edition = "2018"

description = "An example demonstrating setting a custom root certificate with rustls"

[dependencies]
aws-config = "0.4.1"
aws-smithy-client = "0.34.1"
# bringing our own HTTPs so no need for the default features
aws-sdk-s3 = { version = "0.4.1", default-features = false }
tokio = { version = "1", features = ["full"] }
rustls = "0.20.2"
hyper-rustls = { version = "0.23.0", features = ["http2"] }
