[package]
name = "custom-root-certs"
version = "0.1.0"
authors = ["rcoh@amazon.com>"]
edition = "2021"

description = "An example demonstrating setting a custom root certificate with rustls"

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-smithy-client = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
# bringing our own HTTPs so no need for the default features
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main", default-features = false }
tokio = { version = "1.20.1", features = ["full"] }
rustls = "0.20.6"
hyper-rustls = { version = "0.23.0", features = ["http2"] }
