[package]
name = "cognitoidentityprovider-code-examples"
version = "0.1.0"
authors = ["John DiSanti <jdisanti@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.0.26-alpha"
aws-sdk-cognitoidentityprovider = "0.0.26-alpha"
aws-smithy-types-convert = { version = "0.30.0-alpha", features = ["convert-chrono"] }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.18"
