[package]
name = "concurrency-sqs"
version = "0.1.0"
authors = [
    "Zelda Hessler <zhessler@amazon.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-sqs = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
futures = "0.3.25"
tokio = { version = "1.20.1", features = ["full"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.37"
